banner picture align fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -92,7 +92,7 @@ body {
 }
 
 #project-idea-img {
-    width: 25rem;
+    width: 23rem;
 }
 
 .us-img {
